--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,4 +2,124 @@
 /**Typography/
 
 /*.5rem = 8px | 1 rem =16px*/
+/*Z-index*/
+/*Responsive Typography*/
 @import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600&family=Roboto:wght@400;500&display=swap");
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0; }
+
+html {
+  scroll-behavior: smooth; }
+
+body {
+  font-family: "Roboto", sans-serif;
+  font-size: 0.938rem;
+  background-color: #fcfcfd;
+  color: #45484a; }
+
+img {
+  max-width: 100%;
+  height: auto; }
+
+h1, h2, h3 {
+  color: #27292a;
+  font-family: "Lora", serif;
+  font-weight: 500; }
+
+ul {
+  list-style: none; }
+
+a {
+  text-decoration: none; }
+
+.container {
+  max-width: 1024px;
+  margin-inline: 1.5rem; }
+
+.grid {
+  display: grid;
+  gap: 1.5rem; }
+
+.section {
+  padding-block: 2.5rem; }
+  .section__border {
+    border-bottom: 1px solid #27292a;
+    padding-bottom: 3.5rem; }
+  .section__title, .section__subtitle {
+    text-align: center; }
+  .section__title {
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-bottom: .25rem; }
+  .section__subtitle {
+    display: block;
+    font-size: 0.813rem;
+    color: #8a8f93;
+    margin-bottom: 3rem; }
+
+.main {
+  overflow: hidden; }
+
+.header {
+  width: 100%;
+  position: fixed;
+  bottom: 2rem;
+  left: 0;
+  z-index: 100; }
+
+.nav {
+  height: calc((3.5rem) + .5rem);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fcfcfd;
+  box-shadow: 0 4px 20px rgba(87, 118, 142, 0.1);
+  padding-inline: 1.5rem;
+  border-radius: 3rem; }
+  .nav__logo, .nav__toggle, .nav__close {
+    color: #27292a; }
+  .nav__logo {
+    font-family: "Lora", serif;
+    font-weight: 500; }
+  .nav__toggle {
+    display: flex;
+    font-size: 1.25rem;
+    cursor: pointer; }
+  .nav__list {
+    grid-template-columns: repeat(3, max-content);
+    justify-content: center;
+    gap: 2rem 3rem; }
+  .nav__link {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: .25rem;
+    font-size: 0.75rem;
+    color: #45484a;
+    transition: color .3s; }
+    .nav__link:hover {
+      color: #27292a; }
+    .nav__link i {
+      font-size: 1.25rem; }
+  .nav__close {
+    position: absolute;
+    right: 1.5rem;
+    bottom: .7rem;
+    font-size: 1.5rem;
+    cursor: pointer; }
+
+@media screen and (max-width: 1023px) {
+  .nav__menu {
+    position: fixed;
+    width: 88%;
+    left: 0;
+    right: 0;
+    bottom: -60%;
+    margin: 0 auto;
+    background-color: #fcfcfd;
+    box-shadow: 0 4px 20px rgba(68, 91, 111, 0.1);
+    padding: 2rem 1.5rem 5rem;
+    border-radius: 2rem;
+    transition: bottom .3s; } }
