--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -26,3 +26,29 @@ $normal-font-size:.938rem;
 $small-font-size: .813rem;
 $smaller-font-size: .75rem;
 $tiny-font-size: .625rem;
+
+$font-medium:500;
+$font-semi-bold:600;
+
+/*Z-index*/
+$z-normal:1;
+$z-tooltip:10;
+$z-fixed:100;
+
+
+/*Responsive Typography*/
+
+@media screen and  (min-width:1024px) {
+
+$biggest-font-size:3rem;
+$h1-font-size:2.25rem;
+$h2-font-size:1.5rem;
+$h3-font-size:1.25rem;
+$normal-font-size:1rem;
+$small-font-size: .875rem;
+$smaller-font-size: .813rem;
+$tiny-font-size: .688rem;
+}
+
+
+
