--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,2 +1,5 @@
 @import 'abstracts/variables';
+@import 'base/base';
 @import 'sass/base/typography';
+@import 'base/utilities';
+@import 'components/_header';
