--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -68,6 +68,13 @@ border-radius: 3rem;
 
 }
 
+
+
+.show-menu{
+    bottom: 2rem !important;
+   
+}
+
 @media screen and(max-width:1023px) {
     .nav__menu{
         position: fixed;
