--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,4 +2,5 @@
 @import 'base/base';
 @import 'sass/base/typography';
 @import 'base/utilities';
-@import 'components/_header';
+@import 'components/header';
+@import 'layout/home'
