--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,5 +2,7 @@
 @import 'base/base';
 @import 'sass/base/typography';
 @import 'base/utilities';
+@import 'base/animations';
 @import 'components/header';
-@import 'layout/home'
+@import 'layout/home';
+@import 'layout/skills';
