Added projects and services. Started markup for Contact

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,3 +7,6 @@
 @import 'layout/home';
 @import 'layout/skills';
 @import 'layout/qualification';
+@import 'layout/services';
+@import 'layout/projects';
+@import 'components/swiper';
