--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -299,3 +299,108 @@ a {
     bottom: 12rem;
     transform: rotate(15deg);
     opacity: .1; }
+
+.services__container {
+  row-gap: 2.5rem;
+  justify-content: center; }
+
+.services__card {
+  position: relative;
+  width: 228px;
+  height: 322px;
+  background-color: #f2f2f3;
+  text-align: center;
+  padding: 3.5rem 1rem;
+  border-radius: 7.25rem; }
+  .services__card:hover .services__border {
+    opacity: 1; }
+  .services__card:hover i {
+    transform: rotateY(360deg); }
+  .services__card i {
+    display: block;
+    font-size: 2rem;
+    color: #27292a;
+    margin-bottom: .75rem;
+    transition: transform .8s; }
+
+.services__title {
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin-bottom: 1.5rem; }
+
+.services__border {
+  width: 248px;
+  height: 342px;
+  border: 1.8px solid #8a8f93;
+  border-radius: 7.75rem;
+  position: absolute;
+  inset: 0;
+  left: -10px;
+  margin: auto;
+  z-index: -1;
+  transition: opacity .6s;
+  opacity: 0; }
+
+.projects__container {
+  overflow: initial; }
+
+.projects__content {
+  display: grid;
+  justify-content: center; }
+
+.projects__img {
+  width: 250px;
+  border-radius: .75rem;
+  margin-bottom: 1.25rem; }
+
+.projects__subtitle {
+  font-size: 0.813rem;
+  color: #8a8f93; }
+
+.projects__title {
+  font-size: 1.25rem;
+  margin-bottom: 1.25rem;
+  margin: .5rem 0 1.25rem; }
+
+.projects__button {
+  display: inline-flex;
+  align-items: center;
+  column-gap: .5rem;
+  color: #27292a;
+  font-size: 0.813rem; }
+  .projects__button:hover i {
+    transform: translateX(0.25rem); }
+  .projects__button i {
+    font-size: 1rem;
+    transition: transform .3s; }
+
+.projects__container .swiper-button-prev::after, .projects__container .swiper-button-next::after {
+  content: ''; }
+
+.projects__container .swiper-button-prev, .projects__container .swiper-button-next {
+  width: initial;
+  height: initial;
+  margin: initial;
+  font-size: 2.5rem;
+  color: #27292a; }
+
+.projects__container .swiper-button-prev {
+  left: -1rem;
+  top: 4.5rem; }
+
+.projects__container .swiper-button-next {
+  right: -1rem;
+  top: 4.5rem; }
+
+.projects__container .swiper-slide {
+  margin-bottom: 4.5rem; }
+
+.projects__container .swiper-pagination-bullets {
+  bottom: 0; }
+
+.projects__container .swiper-pagination-bullet {
+  background-color: #8a8f93;
+  opacity: initial; }
+
+.projects__container .swiper-pagination-bullet-active {
+  background-color: #27292a; }
