--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,12 @@ a {
 .main {
   overflow: hidden; }
 
+.color-blue {
+  color: #3279b3; }
+
+.color-red {
+  color: #da3125; }
+
 @keyframes bounce-skills {
   0% {
     transform: translate(0); }
@@ -404,3 +410,102 @@ a {
 
 .projects__container .swiper-pagination-bullet-active {
   background-color: #27292a; }
+
+.contact__container {
+  row-gap: 3.5rem; }
+
+.contact__title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: .5rem;
+  font-size: 0.813rem;
+  font-weight: 600;
+  margin-bottom: 2.5rem; }
+  .contact__title i {
+    font-size: 1rem;
+    font-weight: initial; }
+
+.contact__info, .contact__data, .contact__form {
+  display: grid; }
+
+.contact__info {
+  row-gap: 2rem; }
+
+.contact__data {
+  row-gap: .75rem; }
+  .contact__data-title {
+    font-size: 0.813rem;
+    color: #8a8f93; }
+  .contact__data-info {
+    font-size: 0.813rem;
+    font-family: "Lora", serif;
+    color: #27292a; }
+
+.contact__button {
+  width: max-content;
+  display: inline-flex;
+  align-items: center;
+  column-gap: .5rem;
+  color: #27292a;
+  font-size: 0.813rem; }
+  .contact__button i {
+    font-size: 1rem;
+    transition: transform .3s; }
+  .contact__button:hover {
+    transform: translateX(0.25rem); }
+
+.contact__form {
+  position: relative;
+  row-gap: 2rem; }
+  .contact__form-div {
+    position: relative;
+    height: 4rem; }
+  .contact__form-input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 2px solid #8a8f93;
+    padding: 1.5rem;
+    border-radius: 2rem;
+    font-size: 0.938rem;
+    font-family: "Lora", serif;
+    color: #27292a;
+    background: none;
+    outline: none;
+    z-index: 1; }
+  .contact__form-tag {
+    position: absolute;
+    top: -.75rem;
+    left: 1.25rem;
+    z-index: 10;
+    background-color: #fcfcfd;
+    color: #27292a;
+    font-size: 0.75rem;
+    font-weight: 500;
+    padding: .35rem; }
+  .contact__form-area {
+    height: 10rem; }
+  .contact__form-area textarea {
+    resize: none; }
+
+.contact__form .contact__button {
+  border: none;
+  background: none;
+  font-size: 1.25rem;
+  font-family: "Lora", serif;
+  font-weight: 600;
+  cursor: pointer;
+  outline: none;
+  margin-top: 8rem; }
+  .contact__form .contact__button i {
+    font-size: 1.5rem;
+    font-weight: initial; }
+
+.contact__confirm {
+  font-size: 0.813rem;
+  position: absolute;
+  bottom: 2.8rem;
+  left: 1.5rem; }
