--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,9 @@ a {
 .color-red {
   color: #da3125; }
 
+.active-link {
+  color: #da3125 !important; }
+
 @keyframes bounce-skills {
   0% {
     transform: translate(0); }
@@ -509,3 +512,67 @@ a {
   position: absolute;
   bottom: 2.8rem;
   left: 1.5rem; }
+
+.footer__container {
+  padding: 3rem 0 7rem;
+  text-align: center; }
+
+.footer__title {
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin-bottom: 1rem; }
+
+.footer__list, .footer__social {
+  display: flex;
+  justify-content: center; }
+
+.footer__list {
+  margin: 2.5rem 0;
+  column-gap: 2.5rem; }
+  .footer__list:hover {
+    text-decoration: underline; }
+
+.footer__social {
+  column-gap: 1.2rem; }
+  .footer__social-link {
+    font-size: 1.25rem;
+    color: #27292a;
+    transition: transform .3s; }
+    .footer__social-link:hover {
+      transform: translateY(-0.15rem); }
+
+.footer__copy {
+  display: block;
+  margin-top: 4.5rem;
+  font-size: 0.813rem;
+  color: #8a8f93; }
+
+::-webkit-scrollbar {
+  width: .6rem;
+  border: .5rem;
+  background-color: #bdc0c2; }
+
+::-webkit-scrollbar-thumb {
+  background-color: #a2a6a9;
+  border-radius: .5rem; }
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #888d91; }
+
+.scrollup {
+  position: fixed;
+  right: 1rem;
+  bottom: 0;
+  background-color: #fcfcfd;
+  box-shadow: 0 4px 12px rgba(68, 91, 111, 0.15);
+  display: inline-flex;
+  padding: .35rem;
+  font-size: 1.1rem;
+  color: #27292a;
+  z-index: 10;
+  transition: bottom .3s, transform .3s; }
+  .scrollup:hover {
+    transform: translateY(-0.25rem); }
+
+.show-scroll {
+  bottom: 9.5rem; }
