--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,3 +11,5 @@
 @import 'layout/projects';
 @import 'components/swiper';
 @import 'layout/contact';
+@import 'components/footer';
+@import 'components/scrollbar';
