--- a/sass/Layout/_qualification.scss
+++ b/sass/Layout/_qualification.scss
@@ -5,6 +5,11 @@
 
     &__container{
         row-gap: 3.5rem;
+        @include respond(tab-land) {
+            grid-template-columns: repeat(2,max-content);
+            justify-content: center;
+            column-gap: 10rem;
+          }
     }
     &__title{
         display: flex;
