--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,8 @@
+
 @import 'abstracts/variables';
+@import 'abstracts/mixins';
 @import 'base/base';
-@import 'sass/base/typography';
+@import 'base/typography';
 @import 'base/utilities';
 @import 'base/animations';
 @import 'components/header';
@@ -13,3 +15,4 @@
 @import 'layout/contact';
 @import 'components/footer';
 @import 'components/scrollbar';
+@import 'components/theme';
